syntax = "proto2";

package cloudprober.targets.rtcreporter;

message RtcReportOptions {
  // RTC configs which cloudprober should report itself to.
  repeated string cfgs = 1;
  // RTC rate at which cloudprober should report itself.
  optional int32 interval_msec = 2 [default = 10000];
  // Which system variables should be reported. For more information see
  // cloudprober/util. The sysVars dictionary contains variable names mapped to
  // their values. variables should be a list of the variable names that should
  // be reported (such as public/private ips).
  repeated string variables = 3;
  // Which groups this instance is a member of. See RtcTargetInfo.group for
  // more info.
  repeated string groups = 4;
}

// RtcTargetInfo is used by RTC targets. Hosts report all the ways they may be
// addressed to an RTC configuration, which will later be used as target
// information.
// The rtcreporter package is responsible for creating and sending these
// protobufs, while the rtc targets type of the targets package will receive
// these protobufs.
message RtcTargetInfo {
  // Name of host. Also used as variable name in the RTC config.
  optional string instance_name = 1;
  // List of tags this host belongs to, in order to filter out groups of related
  // hosts. For instance, maybe an rtc lister will only include instances that
  // have the group tag "DMZ_1". Instances may belong to multiple groups.
  repeated string groups = 2;
  // List of all ways this host can be addressed (such as public / private ip).
  repeated Address addresses = 3;

  message Address {
    // "Name" of this address. An rtc lister may only include, for instance,
    // public ip addresses. It will filter out all Addresses that do not have
    // "PUBLIC_IP" as their tag.
    optional string tag = 1;
    // Address contents.
    optional string address = 2;
  }
}
